# OpenVAF

./: .build.yml  .gitignore  .gitlab-ci.yml  CHANGELOG_OSDI  CHANGELOG_OSDI.md  CHANGELOG_VERILOGAE  CHANGELOG_VERILOGAE.md  Cargo.toml  Dockerfile  LICENSE  README.md  bors.toml  flake.nix  foo.sh  local_ci.sh  osdi_cliff.toml  rustfmt.toml  setup.py  test.sh  typos.toml  vae_cliff.toml
compiler_lib/: Cargo.toml
compiler_lib/ast/: Cargo.toml
compiler_lib/ast/src/: lib.rs  symbol_table.rs
compiler_lib/ast_lowering/: Cargo.toml
compiler_lib/ast_lowering/src/: allowed_operations.rs  error.rs  expression.rs  global.rs  lib.rs  lints.rs  name_resolution.rs  statements.rs
compiler_lib/codegen_llvm/: Cargo.toml
compiler_lib/codegen_llvm/src/: intrinsics.rs  lib.rs  rvalue.rs  types.rs
compiler_lib/constants/: Cargo.toml
compiler_lib/constants/src/: lib.rs
compiler_lib/data_structures/: Cargo.toml
compiler_lib/data_structures/src/: bit_set.rs  iter.rs  lib.rs  sync.rs  work_queue.rs
compiler_lib/derivatives/src/: error.rs  lib.rs  lints.rs  rvalue.rs
compiler_lib/diagnostics/: Cargo.toml
compiler_lib/diagnostics/src/: lib.rs  lints.rs
compiler_lib/hir/: Cargo.toml
compiler_lib/hir/src/: functions.rs  lib.rs
compiler_lib/hir_lowering/: Cargo.toml
compiler_lib/hir_lowering/src/: cfg_builder.rs  error.rs  lib.rs  lints.rs
compiler_lib/ir/: Cargo.toml
compiler_lib/ir/src/: convert.rs  functions.rs  ids.rs  lib.rs
compiler_lib/linker/: Cargo.toml
compiler_lib/linker/src/: lib.rs
compiler_lib/lld/: Cargo.toml  build.rs
compiler_lib/macros/: Cargo.toml
compiler_lib/macros/src/: enum_derives.rs  lib.rs  lints.rs  symbols.rs
compiler_lib/middle/: Cargo.toml  unused.rs
compiler_lib/middle/src/: fold.rs  functions.rs  inputs.rs  lib.rs  util.rs
compiler_lib/parser/: Cargo.toml  build.rs
compiler_lib/parser/src/: declarations.rs  error.rs  grammar.lalrpop  lib.rs  lints.rs  tokenstream.rs
compiler_lib/pass/: Cargo.toml
compiler_lib/pass/src/: backward_slice.rs  copy_propagation.rs  forward_slice.rs  lib.rs  lints.rs  live_variables.rs  post_dominance.rs  reaching_definitions.rs  remove_dead_locals.rs  simplify.rs  simplify_branches.rs  strip.rs  verify.rs  visit.rs
compiler_lib/preprocessor/: Cargo.toml
compiler_lib/preprocessor/src/: error.rs  lexer.rs  lib.rs  lints.rs  macros.rs  tokenstream.rs
compiler_lib/session/: Cargo.toml
compiler_lib/session/src/: lib.rs  symbols.rs
compiler_lib/targets/: Cargo.toml  build.rs
compiler_lib/targets/src/: lib.rs  spec.rs
compiler_lib/test/: Cargo.toml
compiler_lib/test/parser/: contribute.va
compiler_lib/test/src/: code_gen.rs  lib.rs  middle.rs  parser.rs
compiler_lib/transformations/: Cargo.toml
compiler_lib/transformations/src/: backward_slice.rs  copy_propagation.rs  forward_slice.rs  lib.rs  live_variables.rs  remove_dead_locals.rs  simplify.rs  simplify_branches.rs  strip.rs  tainted_locations.rs  verify.rs  visit.rs
crates/: Cargo.toml
crates/analysis/: Cargo.toml
crates/analysis/src/: constant_propagation.rs  control_dependence.rs  lib.rs  post_dominance.rs  program_slicing.rs  reaching_definitions.rs
crates/arena/src/: lib.rs
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs  symbol_table.rs
crates/ast_lowering/: Cargo.toml
crates/ast_lowering/src/: allowed_operations.rs  error.rs  expression.rs  global.rs  lib.rs  (+3 more)
crates/auto_diff/: Cargo.toml
crates/backend/: Cargo.toml
crates/basedb/: Cargo.toml
crates/bforest/: README.md
crates/cfg/: Cargo.toml
crates/cfg_opt/: Cargo.toml
crates/cfg_simplify/: Cargo.toml
crates/codegen_llvm/: Cargo.toml
crates/codegen_llvm_old/: Cargo.toml
crates/codegen_rust/: Cargo.toml
crates/const_eval/: Cargo.toml
crates/constant_fold/: Cargo.toml
crates/constants/: Cargo.toml
crates/data_flow/: Cargo.toml
crates/data_structures/: Cargo.toml
crates/derivatives/: Cargo.toml
crates/diagnostics/: Cargo.toml
crates/driver/: Cargo.toml
crates/hir/: Cargo.toml
crates/hir_def/: Cargo.toml
crates/hir_lower/: Cargo.toml
crates/hir_lowering/: Cargo.toml
crates/hir_old/: Cargo.toml
crates/hir_ty/: Cargo.toml
crates/ir/: Cargo.toml
crates/lexer/: Cargo.toml
crates/linker/: Cargo.toml
crates/lld/: Cargo.toml  build.rs
crates/llvm/: build.rs
crates/macros/: Cargo.toml
crates/melange/: Cargo.toml
crates/middle/: Cargo.toml  test.rs  unused.rs
crates/mir/: Cargo.toml
crates/mir_autodiff/: Cargo.toml
crates/mir_build/: Cargo.toml
crates/mir_interpret/: Cargo.toml
crates/mir_llvm/: Cargo.toml
crates/mir_opt/: Cargo.toml
crates/mir_reader/: Cargo.toml
crates/openvaf-driver/: Cargo.toml
crates/osdi/: Cargo.toml  build.rs  stdlib.c
crates/parser/: Cargo.toml
crates/pass/: Cargo.toml
crates/preprocessor/: Cargo.toml
crates/program_dependence/: Cargo.toml
crates/session/: Cargo.toml
crates/sim_back/: Cargo.toml
crates/sourcegen/: Cargo.toml  veriloga.ungram
crates/syntax/: Cargo.toml  veriloga.ungram
crates/targets/: Cargo.toml  build.rs
crates/test/: Cargo.toml
crates/transformations/: Cargo.toml
crates/ty_index_set/: Cargo.toml
crates/typed_indexmap/: Cargo.toml
crates/verilogae/: Cargo.toml
crates/verilogae_ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/verilogae_py/: Cargo.toml  build.rs
crates/vfs/: Cargo.toml
frontend/: Cargo.toml  build.rs
frontend/benches/: extractions.rs
frontend/src/: constants.rs  diagnostic.rs  lib.rs  lints.rs  literals.rs  symbol.rs  symbol_table.rs  test.rs  util.rs
frontend/tests/: common.rs  extractions.rs
macros/: Cargo.toml
macros/src/: lints.rs  symbols.rs
rust_codegen/: Cargo.toml
rust_codegen/src/: lib.rs
sourcegen/: Cargo.toml  build.rs
sourcegen/src/: ast.rs  hir_builtins.rs  lib.rs  mir_instructions.rs  osdi.rs  tests.rs
test/: Cargo.toml
test/parser/: net_declaration.va
test/parsing/: macros.va  module_header.va  net_declaration.va  statements.va  variable_declaration.va
test/src/: code_gen.rs  lib.rs  main.rs  middle.rs  osdic_middle.rs  parser.rs  preprocessor.rs
(+2472 files in other folders)
