
[workspace]
resolver = "2"
members = ["crates/*","xtask/", "lib/*"]
exclude = ["exclude/*"]

[profile.release]
lto = "thin"
incremental = true
panic = "abort"


[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = false
panic = "abort"

[profile.dev.package]
# These speed up local tests.
rowan.opt-level = 3
rustc-hash.opt-level = 3
ahash.opt-level = 3
smol_str.opt-level = 3
text-size.opt-level = 3


[patch.crates-io]
salsa = { git = 'https://github.com/DSPOM2/salsa'}
pyo3-ffi = { git = 'https://github.com/DSPOM2/pyo3'}
pyo3-build-config = { git = 'https://github.com/DSPOM2/pyo3'}
