
[workspace]
resolver = "2"
members = ["openvaf/*","melange/*", "verilogae/*", "xtask/", "lib/*"]
exclude = ["melange/examples", "verilogae/tests"]

[profile.release]
lto = "off"
incremental = true
panic = "abort"
debug = false


[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = true
# panic = "abort"

[profile.dev.package]
# These speed up local tests.
rowan.opt-level = 3
rustc-hash.opt-level = 3
ahash.opt-level = 3
smol_str.opt-level = 3
text-size.opt-level = 3
indexmap.opt-level = 3
hashbrown.opt-level = 3
stdx.opt-level = 3
bforest.opt-level = 3
list_pool.opt-level = 3
mir.opt-level = 2
mir_build.opt-level = 2
mir_opt.opt-level = 2


[patch.crates-io]
salsa = { git = 'https://github.com/DSPOM2/salsa'}
