[workspace]

members = [
    "analysis",

    "ast",
    "ast_lowering",

    "constants",

    "constant_fold",
    "codegen_rust",

    "derivatives",

    "data_structures",

    "diagnostics",

    "hir",
    "hir_lowering",
    "ir",
    "mir",

    "macros",

    "parser",
    "preprocessor",

    "session",
    "test"
]