[package]
name = "sourcegen"
version = "0.0.0"
authors = ["DSPOM"]
edition = "2021"
repository= "https://github.com/pascalkuthe/OpenVAF"
description = "A compiler frontend for VerilogA aimed predominently at compact modelling"
license="GPL-3.0"
readme="../README.md"

[lib]
doctest = false

[badges]
maintenance = { status = "actively-developed" }


[dev-dependencies]
xshell = "0.2.3"
indexmap = "1.9"
proc-macro2 = "1.0"
quote = "1.0"
ungrammar = "1.16"
ahash = "0.8"

stdx = {version = "0.0.0", path = "../lib/stdx" }
target = {version = "0.0.0", path = "../openvaf/target" }
