[package]
name = "openvaf-test"
version = "0.8.0"
authors = ["DSPOM"]
edition = "2018"
repository= "https://gitlab.com/DSPOM/OpenVAF"
description = "A compiler frontend for VerilogA aimed predominently at compact modelling"
license="GPL-3.0"
readme="../README.md"

[badges]

maintenance = { status = "actively-developed" }

[dependencies]

openvaf-session = {version = "0.8.0", path = "../compiler_lib/session" }
openvaf-parser = {version = "0.8.0", path = "../compiler_lib/parser" }
openvaf-preprocessor = {version = "0.8.0", path = "../compiler_lib/preprocessor" }
openvaf-ast = {version = "0.8.0", path = "../compiler_lib/ast" }
openvaf-hir = {version = "0.8.0", path = "../compiler_lib/hir" }
openvaf-ir = {version = "0.8.0", path = "../compiler_lib/ir" }
openvaf-middle = {version = "0.8.0", path = "../compiler_lib/middle" }
openvaf-data-structures = {version = "0.8.0", path = "../compiler_lib/data_structures" }
openvaf-ast-lowering = {version = "0.8.0", path = "../compiler_lib/ast_lowering" }
openvaf-diagnostics = {version = "0.8.0", path = "../compiler_lib/diagnostics" }
openvaf-pass = {version = "0.8.0", path = "../compiler_lib/pass" }
openvaf-codegen-llvm = {version = "0.8.0", path = "../compiler_lib/codegen_llvm" }
openvaf-macros = {version = "0.8.0", path = "../compiler_lib/macros" }

tracing = { version = "0.1.26", features = ["max_level_trace"] }


tracing-subscriber = { version = "0.2.19", features = ["fmt","json"] }
tracing-appender = "0.1.2"
clap = "3.0.0-beta.2"
console = "0.14.1"
indicatif = "0.16.2"

#inventory = "0.1"
linkme = "0.2.6"
color-eyre = { version = "0.5.11", default-features = false, features = ["track-caller"] }
eyre = "0.6.5"
chrono = "0.4.19"
humantime= "2.1.0"
paste = "1.0.5"

shellexpand = "2.1.0"
exitcode = "1.1.2"
derive_more = "0.99.16"


[profile.dev]
incremental = false

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
incremental = false
debug = true
debug-assertions = true


[features]
default = []




