[package]
name = "openvaf-data-structures"
version = "0.8.0"
authors = ["DSPOM"]
edition = "2018"
repository= "https://gitlab.com/DSPOM/OpenVAF"
description = "A compiler framework for VerilogA aimed predominently at compact modelling"
license="GPL-3.0"
readme="../README.md"

[badges]
maintenance = { status = "actively-developed" }


[dependencies]


more-asserts = "0.2.1"
arrayvec = "0.7.1"
ahash = "0.7.4"
parking_lot = "0.11.1"
once_cell = "1.8.0"

index_vec = "0.1.2"
cfg-if = "1.0.0"
itertools = "0.10.1"
derivative = "2.2.0"


[features]

default = []


threading = []

nightly = ["parking_lot/nightly"]
