[package]
name = "openvaf-diagnostics"
version = "0.8.0"
authors = ["DSPOM"]
edition = "2018"
repository= "https://gitlab.com/DSPOM/OpenVAF"
description = "A compiler framework for VerilogA aimed predominently at compact modelling"
license="GPL-3.0"
readme="../README.md"

[badges]
maintenance = { status = "actively-developed" }


[dependencies]

beef = "0.5.0"
linkme = "0.2.6"
once_cell = "1.8.0"
more-asserts = "0.2.1"
paste = "1.0.5"

openvaf-data-structures = {version = "0.8.0", path = "../data_structures" }
openvaf-session = {version = "0.8.0", path = "../session"}

openvaf-macros = {version = "0.8.0", path = "../macros"}
openvaf-ir = {version = "0.8.0", path = "../ir"}

[dependencies.annotate-snippets]
version = "0.9.0"
features = ["color"]


