[package]
name = "openvaf-hir"
version = "0.8.0"
authors = ["DSPOM"]
edition = "2018"
repository= "https://gitlab.com/DSPOM/OpenVAF"
description = "A compiler frontend for VerilogA aimed predominently at compact modelling"
license="GPL-3.0"
readme="../README.md"

[badges]
maintenance = { status = "actively-developed" }


[dependencies]

openvaf-data-structures = {version = "0.8.0", path = "../data_structures" }

openvaf-ir = {version = "0.8.0", path = "../ir"}
openvaf-ast = {version = "0.8.0", path = "../ast"}
openvaf-session = {version = "0.8.0", path = "../session"}
