[package]
name = "openvaf-hir-lowering"
version = "0.8.0"
authors = ["DSPOM"]
edition = "2018"
repository= "https://gitlab.com/DSPOM/OpenVAF"
description = "A compiler frontend for VerilogA aimed predominently at compact modelling"
license="GPL-3.0"
readme="../README.md"

[badges]

maintenance = { status = "actively-developed" }


[dependencies]

openvaf-data-structures = {version = "0.8.0", path = "../data_structures" }
openvaf-session = {version = "0.8.0", path = "../session"}
openvaf-diagnostics = {version = "0.8.0", path = "../diagnostics"}

openvaf-hir = {version = "0.8.0", path = "../hir"}
openvaf-middle = {version = "0.8.0", path = "../middle" }
openvaf-ir = {version = "0.8.0", path = "../ir"}
openvaf-constants = {version = "0.8.0", path = "../constants"}
openvaf-derivatives = {version = "0.8.0", path = "../derivatives"}

tracing = "0.1"
thiserror = "1.0"
