[package]
name = "openvaf-ir"
version = "0.8.0"
authors = ["DSPOM"]
edition = "2018"
repository= "https://gitlab.com/DSPOM/OpenVAF"
description = "A compiler frontend for VerilogA aimed predominently at compact modelling"
license="GPL-3.0"
readme="../README.md"

[badges]
maintenance = { status = "actively-developed" }


[dependencies]

more-asserts = "0.2"

openvaf-data-structures = {version = "0.8.0", path = "../data_structures" }

openvaf-session = {version = "0.8.0", path = "../session"}
osdi-types =  {version = "0.1", path="../../osdi/osdi_types"}

[features]

default = []
