[package]
name = "openvaf-macros"
version = "0.8.0"
authors = ["DSPOM"]
edition = "2018"
repository= "https://gitlab.com/DSPOM/OpenVAF"
description = "Procedural macros for OpenVAF: A compiler frontend for VerilogA aimed predominently at compact modelling"
license="GPL-3.0"
readme="../README.md"

[badges]
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
proc-macro2 = "1.0.27"
once_cell = "1.8"

[dependencies.syn]
version = "1.0.73"
features = ["full"]
