[package]
name = "openvaf-middle"
version = "0.8.0"
authors = ["DSPOM"]
edition = "2018"
repository= "https://gitlab.com/DSPOM/OpenVAF"
description = "A compiler frontend for VerilogA aimed predominently at compact modelling"
license="GPL-3.0"
readme="../README.md"

[badges]

maintenance = { status = "actively-developed" }


[dependencies]

openvaf-data-structures = {version = "0.8.0", path = "../data_structures" }
openvaf-hir = {version = "0.8.0", path = "../hir"}
openvaf-ir = {version = "0.8.0", path = "../ir"}
openvaf-session = {version = "0.8.0", path = "../session"}
openvaf-diagnostics = {version = "0.8.0", path = "../diagnostics" }
osdi-types = {version = "0.1", path="../../osdi/osdi_types"}
log = "0.4.14"
tracing = "0.1.26"
rustc-ap-graphviz = { version = "662.0.0", optional = true }
enum-map = "1.1.1"
thiserror = "1.0.25"
itertools = "0.10.1"

[features]

default = []
graphviz = ["rustc-ap-graphviz"]
