[package]
name = "openvaf-session"
version = "0.8.0"
authors = ["DSPOM"]
edition = "2018"
repository= "https://gitlab.com/DSPOM/OpenVAF"
description = "A compiler framework for VerilogA aimed predominently at compact modelling"
license="GPL-3.0"
readme="../README.md"

[badges]
maintenance = { status = "actively-developed" }


[dependencies]
linkme = "0.2.6"
paste = "1.0.5"
more-asserts = "0.2.1"
bytecount = "0.6.2"
bumpalo = "3.7.0"
tracing = "0.1.26"
tracing-error = "0.1.2"
openvaf-data-structures = {version = "0.8.0", path = "../data_structures" }
openvaf-macros = {version = "0.8.0", path = "../macros" }

cfg-if = "1.0.0"

[features]

default = []

global_session = ["openvaf-data-structures/threading"]
