[package]
name = "openvaf-test"
version = "0.8.0"
authors = ["DSPOM"]
edition = "2018"
repository= "https://gitlab.com/DSPOM/OpenVAF"
description = "A compiler frontend for VerilogA aimed predominently at compact modelling"
license="GPL-3.0"
readme="../README.md"

[badges]

maintenance = { status = "actively-developed" }

[dependencies]

openvaf-session = {version = "0.8.0", path = "../session"}
openvaf-parser = {version = "0.8.0", path = "../parser"}
openvaf-preprocessor = {version = "0.8.0", path = "../preprocessor"}
openvaf-ast = {version = "0.8.0", path = "../ast"}
openvaf-ir = {version = "0.8.0", path = "../ir"}
openvaf-hir-lowering = {version = "0.8.0", path = "../hir_lowering"}
openvaf-middle = {version = "0.8.0", path = "../middle"}
openvaf-data-structures = {version = "0.8.0", path = "../data_structures" }
openvaf-ast-lowering = {version = "0.8.0", path = "../ast_lowering"}
openvaf-diagnostics = {version = "0.8.0", path = "../diagnostics"}
openvaf-transformations = {version = "0.8.0", path = "../transformations"}
openvaf-codegen-llvm = {version = "0.8.0", path = "../codegen_llvm"}
tracing = {version = "0.1", features = ["max_level_trace"]}
tracing-tree = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]

openvaf-derivatives = {version = "0.8.0", path = "../derivatives"}
paste = "1.0"
rand = "0.8"

[features]
default = []




