[package]
name = "ast"
version = "0.0.0"
authors = ["DSPOM"]
edition = "2021"
repository= "https://gitlab.com/DSPOM/OpenVAF"
description = "A compiler frontend for VerilogA aimed predominently at compact modelling"
license="GPL-3.0"
readme="../README.md"


[badges]

maintenance = { status = "actively-developed" }


[dependencies]
more-asserts = "0.2.1"

data-structures = {version = "0.0.0", path = "../data_structures" }
ir = {version = "0.0.0", path = "../ir"}
#session = {version = "0.0.0", path = "../session"}
