[package]
name = "ast-lowering"
version = "0.0.0"
authors = ["DSPOM"]
edition = "2018"
repository= "https://gitlab.com/DSPOM/OpenVAF"
description = "A compiler frontend for VerilogA aimed predominently at compact modelling"
license="GPL-3.0"
readme="../README.md"

[badges]

maintenance = { status = "actively-developed" }

[dependencies]
tracing = "0.1.26"
thiserror = "1.0.26"
derive_more = "0.99.16"

data-structures = {version = "0.0.0", path = "../data_structures" }

hir = {version = "0.0.0", path = "../hir"}
ir = {version = "0.0.0", path = "../ir"}
ast = {version = "0.0.0", path = "../ast"}
diagnostics = {version = "0.0.0", path = "../diagnostics"}
session = {version = "0.0.0", path = "../session"}

osdi-types = {version = "0.1", path="../../osdi/osdi_types"}
