[package]
name = "basedb"
version = "0.0.0"
authors = ["DSPOM"]
edition = "2021"
repository= "https://gitlab.com/DSPOM/OpenVAF"
description = "A compiler framework for VerilogA aimed predominently at compact modelling"
license="GPL-3.0"
readme="../README.md"

[badges]
maintenance = { status = "actively-developed" }


[dependencies]

salsa = "0.17.0-pre.2"

vfs = {version = "0.0.0", path = "../vfs" }
syntax = {version = "0.0.0", path = "../syntax" }
data-structures = {version = "0.0.0", path = "../data_structures" }

