[package]
name = "cfg"
version = "0.0.0"
authors = ["DSPOM"]
edition = "2021"
license="GPL-3.0"

[lib]
doctest = false


[dependencies]
stdx = {version = "0.0.0", path = "../stdx" }
arena = {version = "0.0.0", path = "../arena" }
bitset = {version = "0.0.0", path = "../bitset" }

smallvec = {version = "1.7", features = ["const_new","union"]}
arrayvec = "0.7"
ahash = "0.7"
typed-index-collections = "3.0"
once_cell = "1.3"

lasso = {version = "0.6", features = ["ahash"]}

[dev-dependencies]
expect-test = "1.1"
